<resources>
    <string name="app_name">Asthma</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_analysis">Analysis</string>
    <string name="journalButton">Journal</string>

    <!-- Strings related to editpage -->
    <string name="nameT">姓名：</string>
    <string name="nameH">請輸入姓名</string>
    <string name="sexM">男</string>
    <string name="sexF">女</string>
    <string name="birthT">生日：</string>
    <string name="birthE">YYYY / MM / DD</string>
    <string name="heightT">身高：</string>
    <string name="heightE">(cm)</string>
    <string name="weightT">體重：</string>
    <string name="weightE">(kg)</string>
    <string name="editCheck">Save</string>
    <string name="internet_error">伺服器無回應</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registerButton">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="account">Account</string>
    <string name="login">login</string>

    <!-- Strings related to weather -->
    <string name="open_weather_maps_app_id">83a2f6e85ab2f62b548194a86ee653e2</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>

    <!-- String related to journal -->
    <string name="feverT">發燒症狀</string>
    <string name="haveOn">有</string>
    <string name="haveOff">沒有</string>
    <string name="coughT">咳嗽</string>
    <string name="coughOn">咳嗽</string>
    <string name="coughOff">無咳嗽</string>
    <string name="sleepT">夜間症狀:</string>
    <string name="daytimeT">白天症狀:</string>
    <string name="noseT">鼻子症狀:</string>
    <string name="nose1T">鼻癢揉鼻</string>
    <string name="nose2T">打噴嚏</string>
    <string name="nose3T">鼻塞</string>
    <string name="nose4T">流鼻水(分泌物)</string>
    <string name="eyeT">眼睛症狀:</string>
    <string name="skinT">皮膚症狀:</string>
    <string name="otherT">其他備註:</string>

    <!-- Strings for filling fields -->
    <string-array name="fields">
        <item>fever</item>
        <item>sleep</item>
        <item>daytime</item>
        <item>nose1</item>
        <item>nose2</item>
        <item>nose3</item>
        <item>nose4</item>
        <item>eye</item>
        <item>skin</item>
    </string-array>
    <string name="setContent">Choose fields to show</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="setChartContent">set chart content</string>
    <string name="chartTitle">Daily statistics</string>
    <string name="serverResult">Server Result</string>
    <string name="waitServerMsg">Waiting for server</string>

</resources>
