<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/journal_background"
    android:gravity="end|right"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context="com.example.user.asthma.JournalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <CheckBox
            android:id="@+id/feverT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feverT"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/coughB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/coughOff"
            android:textOn="@string/coughOn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/sleepT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sleepT"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/sleepText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp" />

        <SeekBar
            android:id="@+id/sleepBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="2"
            android:progress="0"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:scrollbarSize="50dp"
            android:progressDrawable="@drawable/bar_bg"
            android:thumbTint="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/breathT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/breathT"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/breathText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp" />

        <SeekBar
            android:id="@+id/breathBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="2"
            android:progress="0"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:scrollbarSize="50dp"
            android:progressDrawable="@drawable/bar_bg"
            android:thumbTint="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/T"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/heightE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:hint="@string/heightE"
            android:inputType="number"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button_background"
        android:elevation="0dp"
        android:onClick="journalSaved"
        android:text="@string/editCheck" />


</LinearLayout>
